# monocycle_nash

./: .gitignore  LICENSE  README.md  pyproject.toml
data/run_config/: compare_approximation.toml  compare_random_approximation.toml  experiment_team_strict_spectrum.toml  experiment_team_strict_spectrum_report16_50_baseline.toml  experiment_team_strict_spectrum_report16_50_power_wide.toml  experiment_team_strict_spectrum_report16_50_vector_wide.toml  experiment_team_strict_spectrum_report16_baseline.toml  experiment_team_strict_spectrum_report16_power_wide.toml  experiment_team_strict_spectrum_report16_vector_wide.toml  experiment_team_strict_spectrum_report_baseline.toml  experiment_team_strict_spectrum_report_power_wide.toml  experiment_team_strict_spectrum_report_vector_wide.toml  graph_payoff.toml  main.toml  plot_characters.toml  solve_payoff.toml
data/setting/: local.toml
document/: class_design.md  data.md  index.md  modeling.md  test_strategy.md  todo.txt  usecase.md
document/class_design/: components.md  index.md  preamble.md  pure_strategy.md  team_payoff.md
document/design/: class.md  class_design.md  class_design_v2.md  index.md
document/experiment/: team_strict_spectrum_char16_gen50_runbook_2026-04-02.md  team_strict_spectrum_plan.md  team_strict_spectrum_random_character_report_2026-04-02.md  team_strict_spectrum_random_character_report_char16_2026-04-02.md
document/input_loader/: index.md  usecase_entrypoints.md
document/management/: run_result_management_spec.md
document/test/: index.md  janken.md
document/theory/: 22game.md  a_calc.md  index.md  monocycle.md  payoff_matrix_approximation.md  power.md
scripts/: run_team_strict_spectrum_report16_gen50.py
src/: example.py  main.py  test_isosurface.py
src/equilibrium/: domain.py
src/isopower/: __init__.py  calc_a.py  optimal_triangle.py
src/matrix/: base.py  builder.py  general.py  monocycle.py
src/rule/: character.py  (+2 more)
(+211 files in other folders)
