[project]
name = "1cycle-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# ビルド用の設定でサンプルコードにはよく書かれてる
# 本プロジェクトで使っていないっぽいのにコピペで有効にしておくのは危険
# 一旦コメントにして問題起きたら疑う
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath= ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

