[project]
name = "monocycle-nash"
version = "0.1.0"
description = "Monocycle Nash equilibrium solver"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nashpy>=0.0.43",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
]


[project.scripts]
runmeta = "monocycle_nash.runmeta.cli:main"
main = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monocycle_nash"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

